--- a/docker/alpine/im/Dockerfile
+++ b/docker/alpine/im/Dockerfile
@@ -11,16 +11,22 @@ RUN apk add --no-cache \
   py-mysqldb \
   gcc \
   py-pip \
-  ansible \
   procps \
   jq \
   py-pep8 \
   python-dev \
   musl-dev \
   libffi-dev \
-  openssl-dev 
+  openssl-dev \
+  libssh2-dev \
+  make \
+  py-pep8
 
-RUN pip install nose scp netaddr apache-libcloud mock bottle nose-timer suds azure-mgmt-storage azure-mgmt-compute azure-mgmt-network azure-mgmt-resource azure-mgmt-dns pywinrm pyvmomi azure-storage ssh2-python coverage
+RUN ln -s /usr/bin/pep8-2 /usr/bin/pep8
+RUN pip install pip -U
+RUN pip install nose scp netaddr apache-libcloud mock bottle nose-timer suds azure-mgmt-storage azure-mgmt-compute azure-mgmt-network azure-mgmt-resource azure-mgmt-dns pywinrm pyvmomi azure-storage coverage
+RUN pip install ansible
+RUN pip install ssh2-python
 
 # Install RADL lib
 RUN git clone https://github.com/grycap/RADL /home/jenkins/RADL \
