--- a/docker/ubuntu/18-04/im/Dockerfile
+++ b/docker/ubuntu/18-04/im/Dockerfile
@@ -15,6 +15,7 @@ RUN apt-get update && apt-get install -y \
     sshpass \
     libssl-dev \
     libffi-dev \
+    python-mysql.connector \
  && apt-get clean \
  && rm -rf /var/lib/apt/lists/*
 
