--- a/docker/ubuntu/18-04/im-py3/Dockerfile
+++ b/docker/ubuntu/18-04/im-py3/Dockerfile
@@ -18,6 +18,7 @@ RUN apt-get update && apt-get install -y \
     python3-paramiko \
     python3-boto \
     python3-bottle \
+    python3-psutil \
     python3-mysql.connector \
     libmysqld-dev \
     libsqlite3-dev \
